--- a/srcMaxime/InterfacesQuizTestConnaissances/FenetreGestion.fxml
+++ b/srcMaxime/InterfacesQuizTestConnaissances/FenetreGestion.fxml
@@ -31,8 +31,8 @@
                </font>
             </Label>
             <Button fx:id="buttonRetour" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#retour" text="&lt;-" />
-            <Button fx:id="modifCategorie" layoutX="99.0" layoutY="294.0" mnemonicParsing="false" prefHeight="82.0" prefWidth="199.0" text="Modifier une Catégorie" textFill="#cc0000" />
-            <Button fx:id="modifSousCat" layoutX="395.0" layoutY="294.0" mnemonicParsing="false" onAction="#modifSousCat" prefHeight="82.0" prefWidth="199.0" text="Modifier une Sous-catégorie" textFill="#cc0000" />
+            <Button fx:id="modifCategorie" layoutX="99.0" layoutY="294.0" mnemonicParsing="false" prefHeight="82.0" prefWidth="199.0" text="Modifier une Catégorie &#10;existante" textAlignment="CENTER" textFill="#cc0000" />
+            <Button fx:id="modifSousCat" layoutX="395.0" layoutY="294.0" mnemonicParsing="false" onAction="#modifSousCat" prefHeight="82.0" prefWidth="199.0" text="Modifier une Sous-catégorie &#10;existante" textAlignment="CENTER" textFill="#cc0000" />
             <Button fx:id="createCategorie" layoutX="99.0" layoutY="168.0" mnemonicParsing="false" prefHeight="82.0" prefWidth="199.0" text="Créer une Catégorie" textFill="#cc0000" />
             <Button fx:id="createSousCat" layoutX="395.0" layoutY="168.0" mnemonicParsing="false" prefHeight="82.0" prefWidth="199.0" text="Créer une Sous-catégorie" textFill="#cc0000" />
 
