--- a/src/interfacesQuizTestConnaissances/FenetreChoixCategorie.fxml
+++ b/src/interfacesQuizTestConnaissances/FenetreChoixCategorie.fxml
@@ -2,13 +2,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="dynamicPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #08539C;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfacesQuizTestConnaissances.ChoixCategorieController">
+<AnchorPane fx:id="dynamicPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #08539C;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfacesQuizTestConnaissances.ChoixCategorieController">
    <children>
-      <Text fill="WHITE" fontSmoothingType="LCD" layoutX="138.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choisissez votre catégorie" textAlignment="CENTER">
+      <Text fill="WHITE" fontSmoothingType="LCD" layoutX="158.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choisissez votre catégorie" textAlignment="CENTER">
          <font>
             <Font name="Comic Sans MS Bold" size="32.0" />
          </font>
@@ -24,9 +25,14 @@
             <Font name="Comic Sans MS" size="15.0" />
          </font>
       </Text>
-      <ComboBox fx:id="listeCategorie" layoutX="141.0" layoutY="225.0" onShowing="#setCategorie" prefWidth="150.0" promptText="Catégorie" />
-      <ComboBox fx:id="listeDifficulte" layoutX="376.0" layoutY="225.0" onShowing="#setDifficulte" prefWidth="150.0" promptText="Difficulté" />
+      <ComboBox fx:id="listeCategorie" layoutX="115.0" layoutY="263.0" onShowing="#setCategorie" prefWidth="150.0" promptText="Catégorie" />
+      <ComboBox fx:id="listeDifficulte" layoutX="429.0" layoutY="263.0" onShowing="#setDifficulte" prefWidth="150.0" promptText="Difficulté" />
       <Button fx:id="buttonFlecheBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#actionButtonFlecheBack" text="&lt;-" />
-      <Button fx:id="valider" layoutX="572.0" layoutY="225.0" mnemonicParsing="false" onAction="#ActionButtonGo" text="Valider" />
+      <Button fx:id="valider" layoutX="324.0" layoutY="343.0" mnemonicParsing="false" onAction="#ActionButtonGo" text="Valider" />
+      <Label layoutX="34.0" layoutY="174.0" text="Veuillez choisir la Catégorie que vous souhaitez réviser ainsi que le niveau de difficulté :" textFill="WHITE">
+         <font>
+            <Font name="Comic Sans MS" size="16.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
