--- a/src/interfacesQuizTestConnaissances/FenetreResultatFinal.fxml
+++ b/src/interfacesQuizTestConnaissances/FenetreResultatFinal.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="dynamicPane" minHeight="500.0" minWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfacesQuizTestConnaissances.ResultatFinalController">
+<AnchorPane fx:id="dynamicPane" minHeight="500.0" minWidth="700.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfacesQuizTestConnaissances.ResultatFinalController">
 	<children>
       <Pane prefHeight="500.0" prefWidth="700.0" styleClass="Fenetre" stylesheets="@myApplication.css">
          <children>
@@ -42,7 +42,7 @@
                </font>
             </Text>
             <Button fx:id="boutonRetourAccueil" layoutX="261.0" layoutY="422.0" mnemonicParsing="false" onAction="#retourAccueil" prefHeight="31.0" prefWidth="179.0" text="Retour à l'accueil" />
-            <Button fx:id="boutonModifierQuestions" layoutX="261.0" layoutY="344.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="179.0" text="Modifier les questions" />
+            <Button fx:id="boutonRejouer" layoutX="261.0" layoutY="344.0" mnemonicParsing="false" onAction="#rejouer" prefHeight="31.0" prefWidth="179.0" text="Rejouer" />
             <Text fx:id="appreciation" fill="WHITE" layoutX="60.0" layoutY="239.0" strokeType="OUTSIDE" strokeWidth="0.0" text="appreciation" wrappingWidth="331.90625">
                <font>
                   <Font name="Comic Sans MS" size="32.0" />
