--- a/src/interfacesQuizTestConnaissances/FenetreResultatFinalPerfectionnementAvancees.fxml
+++ b/src/interfacesQuizTestConnaissances/FenetreResultatFinalPerfectionnementAvancees.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="dynamicPane" minHeight="500.0" minWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfacesQuizTestConnaissances.ResultatFinalController">
+<AnchorPane fx:id="dynamicPane" minHeight="500.0" minWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfacesQuizTestConnaissances.ResultatFinalPerfectionnementAvanceesController">
 	<children>
       <Pane prefHeight="500.0" prefWidth="700.0" styleClass="Fenetre" stylesheets="@myApplication.css">
          <children>
@@ -41,11 +41,11 @@
                   <Font name="Comic Sans MS" size="36.0" />
                </font>
             </Text>
-            <Button fx:id="boutonRetourAccueil" layoutX="254.0" layoutY="410.0" mnemonicParsing="false" onAction="#retourAccueil" prefHeight="42.0" prefWidth="192.0" text="Retour à l'accueil">
+            <Button fx:id="boutonRetourAccueil" layoutX="254.0" layoutY="411.0" mnemonicParsing="false" onAction="#retourAccueil" prefHeight="42.0" prefWidth="192.0" text="Retour à l'accueil">
                <font>
                   <Font name="Comic Sans MS" size="20.0" />
                </font></Button>
-            <Button fx:id="boutonRejouer" layoutX="254.0" layoutY="326.0" mnemonicParsing="false" onAction="#rejouer" prefHeight="42.0" prefWidth="192.0" text="Rejouer">
+            <Button fx:id="boutonRejouer" layoutX="254.0" layoutY="327.0" mnemonicParsing="false" onAction="#rejouer" prefHeight="42.0" prefWidth="192.0" text="Rejouer">
                <font>
                   <Font name="Comic Sans MS" size="20.0" />
                </font></Button>
@@ -54,7 +54,7 @@
                   <Font name="Comic Sans MS" size="32.0" />
                </font>
             </Text>
-            <Button fx:id="boutonRetourJeu" layoutX="254.0" layoutY="368.0" mnemonicParsing="false" onAction="#retourJeu" prefHeight="42.0" prefWidth="192.0" text="Retour au jeu">
+            <Button fx:id="boutonRetourJeu" layoutX="254.0" layoutY="369.0" mnemonicParsing="false" onAction="#retourJeu" prefHeight="42.0" prefWidth="192.0" text="Retour au jeu">
                <font>
                   <Font name="Comic Sans MS" size="20.0" />
                </font></Button>
