--- a/src/interfacesQuizTestConnaissances/FenetreHistoriqueTest.fxml
+++ b/src/interfacesQuizTestConnaissances/FenetreHistoriqueTest.fxml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.PerspectiveCamera?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="dynamicPane" minHeight="500.0" minWidth="700.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfacesQuizTestConnaissances.HistoriqueTestController">
-	<children>
+<AnchorPane fx:id="dynamicPane" minHeight="500.0" minWidth="700.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfacesQuizTestConnaissances.FenetreHistoriqueTestController">
+   <children>
       <Pane prefHeight="500.0" prefWidth="700.0" styleClass="Fenetre" stylesheets="@myApplication.css">
          <children>
-            <Label layoutX="182.0" layoutY="194.0" text="Bientot disponible" textFill="WHITE">
-               <font>
-                  <Font name="Comic Sans MS" size="40.0" />
-               </font>
-            </Label>
             <Label layoutX="31.0" layoutY="462.0" text="Quiz Test de connaissances">
                <font>
                   <Font name="Comic Sans MS" size="13.0" />
@@ -30,7 +29,29 @@
                   <Font name="Comic Sans MS" size="13.0" />
                </font>
             </Label>
-         </children></Pane>
-      <Button fx:id="buttonFlecheBack" layoutX="24.0" layoutY="24.0" mnemonicParsing="false" onAction="#actionButtonFlecheBack" text="&lt;-" />
+            <PerspectiveCamera />
+            <Button fx:id="buttonRejouer" layoutX="362.0" layoutY="419.0" mnemonicParsing="false" onAction="#buttonRejouerAction" prefHeight="35.0" prefWidth="90.0" text="Rejouer" />
+            <Label layoutX="113.0" layoutY="30.0" prefHeight="40.0" prefWidth="475.0" text="Historique des tests précédents " textAlignment="CENTER">
+               <font>
+                  <Font size="32.0" />
+               </font>
+            </Label>
+            <TableView fx:id="view" layoutX="12.0" layoutY="83.0" prefHeight="326.0" prefWidth="673.0">
+              <columns>
+                <TableColumn fx:id="numPartie" prefWidth="69.0" text="N° Partie" />
+                <TableColumn fx:id="date" prefWidth="83.0" text="Date " />
+                  <TableColumn fx:id="heure" prefWidth="88.0" text="Heure" />
+                  <TableColumn fx:id="categorie" prefWidth="102.0" text="Categorie" />
+                  <TableColumn fx:id="sousCategorie" prefWidth="115.0" text="Sous-catégorie" />
+                  <TableColumn fx:id="difficulte" prefWidth="72.0" text="Difficulté" />
+                  <TableColumn fx:id="score" prefWidth="87.0" text="Score obtenu" />
+                  <TableColumn prefWidth="56.0" />
+              </columns>
+            </TableView>
+            <Button fx:id="buttonSupprimer" layoutX="230.0" layoutY="419.0" mnemonicParsing="false" onAction="#buttonSupprimerAction" prefHeight="35.0" prefWidth="90.0" text="Supprimer" />
+            <ComboBox fx:id="listeValeur" layoutX="573.0" layoutY="423.0" onShowing="#initialize" prefHeight="28.0" prefWidth="103.0" promptText="Affichage" />
+         </children>
+      </Pane>
+      <Button fx:id="buttonRetour" layoutX="24.0" layoutY="24.0" mnemonicParsing="false" onAction="#retour" text="&lt;-" />
    </children>
 </AnchorPane>
