--- a/src/interfacesQuizTestConnaissances/FenetreGestion.fxml
+++ b/src/interfacesQuizTestConnaissances/FenetreGestion.fxml
@@ -35,7 +35,8 @@
             <Button fx:id="modifSousCat" layoutX="395.0" layoutY="232.0" mnemonicParsing="false" onAction="#modifSousCat" prefHeight="82.0" prefWidth="199.0" text="Modifier une Sous-catégorie &#10;existante" textAlignment="CENTER" textFill="#cc0000" />
             <Button fx:id="createCategorie" layoutX="99.0" layoutY="120.0" mnemonicParsing="false" onAction="#creationCategorie" prefHeight="82.0" prefWidth="199.0" text="Créer une Catégorie" textFill="#cc0000" />
             <Button fx:id="createSousCat" layoutX="395.0" layoutY="120.0" mnemonicParsing="false" onAction="#creationSousCat" prefHeight="82.0" prefWidth="199.0" text="Créer une Sous-catégorie" textFill="#cc0000" />
-            <Button fx:id="createQuestion" layoutX="99.0" layoutY="338.0" mnemonicParsing="false" onAction="#creationQuestion" prefHeight="82.0" prefWidth="497.0" text="Créer une question" textAlignment="CENTER" textFill="#cc0000" />
+            <Button fx:id="createQuestion" layoutX="99.0" layoutY="338.0" mnemonicParsing="false" onAction="#creationQuestion" prefHeight="82.0" prefWidth="199.0" text="Créer une question" textAlignment="CENTER" textFill="#cc0000" />
+            <Button fx:id="btnModifQuestion" layoutX="395.0" layoutY="338.0" mnemonicParsing="false" onAction="#modifQuestion" prefHeight="82.0" prefWidth="199.0" text="Modifier une question" textAlignment="CENTER" textFill="#cc0000" />
 
          </children></Pane>
    </children>
