--- a/src/interfacesQuizTestConnaissances/FenetreLancementJeu.fxml
+++ b/src/interfacesQuizTestConnaissances/FenetreLancementJeu.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="dynamicPane" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #08539C" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfacesQuizTestConnaissances.LancementJeuController">
+<AnchorPane fx:id="dynamicPane" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #08539C" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfacesQuizTestConnaissances.LancementJeuController">
    <children>
       <Button fx:id="reponseA" layoutX="35.0" layoutY="150.0" mnemonicParsing="false" onAction="#changementQuestion" prefHeight="100.0" prefWidth="300.0" text="reponseA">
          <font>
@@ -36,15 +37,23 @@
             <Font name="Comic Sans MS" size="20.0" />
          </font>
       </Text>
-      <Text fx:id="titreQuestion" layoutX="17.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="titreQuestion" wrappingWidth="665.85791015625">
-         <font>
-            <Font name="Comic Sans MS" size="27.0" />
-         </font>
-      </Text>
       <Button fx:id="buttonRetour" layoutX="14.0" layoutY="24.0" mnemonicParsing="false" onAction="#retour" text="&lt;- Retour">
          <font>
             <Font name="Comic Sans MS" size="14.0" />
          </font>
       </Button>
+      <ScrollPane layoutX="36.0" layoutY="67.0" prefHeight="75.0" prefWidth="625.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="390.0" prefWidth="627.0">
+               <children>
+                  <Text fx:id="titreQuestion" layoutX="14.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="titreQuestion" wrappingWidth="591.85791015625">
+                     <font>
+                        <Font name="Comic Sans MS" size="18.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+        </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
