--- a/src/interfacesQuizTestConnaissances/FenetreLancementPerfectionnementAvances.fxml
+++ b/src/interfacesQuizTestConnaissances/FenetreLancementPerfectionnementAvances.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -36,15 +37,23 @@
             <Font name="Comic Sans MS" size="20.0" />
          </font>
       </Text>
-      <Text fx:id="titreQuestion" layoutX="17.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="titreQuestion" wrappingWidth="665.85791015625">
-         <font>
-            <Font name="Comic Sans MS" size="27.0" />
-         </font>
-      </Text>
       <Button fx:id="buttonRetour" layoutX="14.0" layoutY="24.0" mnemonicParsing="false" onAction="#retour" text="&lt;- Retour">
          <font>
             <Font name="Comic Sans MS" size="14.0" />
          </font>
       </Button>
+      <ScrollPane layoutX="36.0" layoutY="61.0" prefHeight="85.0" prefWidth="625.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="306.0" prefWidth="608.0">
+               <children>
+                  <Text fx:id="titreQuestion" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="titreQuestion" wrappingWidth="608.85791015625">
+                     <font>
+                        <Font name="Comic Sans MS" size="18.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+        </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
