--- a/src/interfacesQuizTestConnaissances/FenetrePopUpCategorieInexistante.fxml
+++ b/src/interfacesQuizTestConnaissances/FenetrePopUpCategorieInexistante.fxml
@@ -10,13 +10,12 @@
    <children>
       <Pane minHeight="200.0" minWidth="300.0" styleClass="Fenetre">
          <children>
-            <Label layoutX="50.0" layoutY="-10.0" prefHeight="120.0" prefWidth="215.0" text="La catégorie suivante &#10;n'existe pas :" textAlignment="CENTER" textFill="#cc0000">
+            <Label layoutX="50.0" layoutY="-10.0" prefHeight="120.0" prefWidth="215.0" text="La catégorie suivante &#10;a été créée :" textAlignment="CENTER" textFill="#cc0000">
                <font>
                   <Font name="Comic Sans MS" size="20.0" />
                </font>
             </Label>
-            <Button fx:id="buttonCreer" layoutX="213.0" layoutY="144.0" mnemonicParsing="false" onAction="#confirmationCreationCategorie" text="Créer" />
-            <Button fx:id="buttonAnnuler" layoutX="30.0" layoutY="144.0" mnemonicParsing="false" onAction="#annuler" text="Abandonner la question" />
+            <Button fx:id="buttonAnnuler" layoutX="134.0" layoutY="142.0" mnemonicParsing="false" onAction="#annuler" text="Ok" />
             <Label fx:id="nomCat" layoutX="30.0" layoutY="90.0" prefHeight="40.0" prefWidth="228.0" text="catACréer" textAlignment="CENTER">
                <font>
                   <Font name="Comic Sans MS" size="14.0" />
