--- a/src/interfacesQuizTestConnaissances/FenetrePopUpQuestionValide.fxml
+++ b/src/interfacesQuizTestConnaissances/FenetrePopUpQuestionValide.fxml
@@ -11,7 +11,7 @@
       <Pane minHeight="200.0" minWidth="300.0" styleClass="Fenetre">
          <children>
             <Button fx:id="buttonAnnuler" layoutX="131.0" layoutY="144.0" mnemonicParsing="false" onAction="#annuler" text="Ok" />
-            <Label fx:id="boiteDialogue" layoutX="23.0" layoutY="14.0" prefHeight="120.0" prefWidth="248.0" text="Importation réussie !" textAlignment="CENTER" textFill="#ff1c1c">
+            <Label fx:id="boiteDialogue" layoutX="38.0" layoutY="14.0" prefHeight="120.0" prefWidth="248.0" text="Création de la &#10;question effectuée" textAlignment="CENTER" textFill="#ff1c1c">
                <font>
                   <Font name="Comic Sans MS" size="25.0" />
                </font>
